added firebase integration

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,6 @@
       <span id="toggle-mic-text">Start Microphone</span>
     </button>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="audioControl_d3_v3.js"></script>
+    <script type="module" src="audioControl_d3_v3.js"></script>
   </body>
 </html>
