--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <!---<script src="https://d3js.org/d3.v7.min.js"></script>--->
     <script type="module" src="audioControl_d3_v3.js"></script>
     <!---<script type="module" src="https://cdn.jsdelivr.net/npm/@auth0/auth0-spa-js@1.20.0/dist/auth0-spa-js.production.esm.js"></script>
     <script type="module" src="auth.js"></script>
