--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CS 7470: SoundGuard 🔊</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet"/>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="icon.png" type="image/png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -13,7 +13,6 @@
   </head>
 
   <body class="background-container d-flex flex-column min-vh-100">
-    <!-- <h1>SoundGuard 🔊</h1> -->
     <nav class="navbar navbar-dark bg-dark border-bottom border-body">
       <a class="navbar-brand fw-bold" href="#">SoundGuard 🔊</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,24 +33,18 @@
 
     <div class="container">
       <div class="row mt-4">
-        <div id="liveAlertPlaceholder" class="col-12">
-        </div>
+        <div id="liveAlertPlaceholder" class="col-12"></div>
       </div>
-  
       <div class="row">
         <div class="col-12 d-flex justify-content-center">
-
             <svg class="graph-container" width="350" height="300"></svg>
-          </div>
         </div>
       </div>
-  
       <div class="row">
         <div class="col-12 text-center">
           <div class="volume-indicator" id="volume">Volume: 0 </div>
         </div>
       </div>
-  
       <div class="row">
         <div class="col-12 text-center">
           <button class="btn btn-dark mb-4" id="toggle-mic">
@@ -60,21 +53,29 @@
           </button>
         </div>
       </div>
-  
       <div class="row">
-        <div class="col-12  d-flex justify-content-center mb-4">
+        <div class="col-12 d-flex justify-content-center mb-4">
           <div class="input-group" style="max-width: 300px;">
-              <span class="input-group-text text-white bg-secondary " id="current-threshold-label">Threshold</span>
+              <span class="input-group-text text-white bg-secondary" id="current-threshold-label">Threshold</span>
             <input type="number" class="form-control" id="current-threshold" value="70">
           </div>
         </div>
       </div>
     </div>
-  
-    <footer class=" footer mt-auto">
-      <p> 2024 SoundGuard.</p>
+
+    <footer class="footer mt-auto">
+      <p>2024 SoundGuard.</p>
     </footer>
-    
+
+    <!-- Placeholder for React component -->
+    <div id="react-root" style="display: none;"></div>
+
+    <!-- Include React and ReactDOM from CDN -->
+    <script src="https://unpkg.com/react/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+
+    <!-- Your custom JavaScript -->
+    <script src="loginHandler.js"></script>
     <script src="pwa.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -82,8 +83,5 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script type="module" src="audioControl_d3_v3.js"></script>
-    <!---<script type="module" src="https://cdn.jsdelivr.net/npm/@auth0/auth0-spa-js@1.20.0/dist/auth0-spa-js.production.esm.js"></script>
-    <script type="module" src="auth.js"></script>
-    <script type="module" src="authProcess.js"></script>--->
   </body>
 </html>
